--- a/synapse-validin.yaml
+++ b/synapse-validin.yaml
@@ -1,5 +1,5 @@
 name: ex-validin
-version: 1.0.2
+version: 1.1.0
 synapse_minversion: [2, 140, 0]
 desc: The ex-validin package provides an interface to the Validin API allowing for enrichment of `inet:ipv4` and `inet:fqdn` nodes.
 
@@ -51,16 +51,31 @@ commands:
           default: rep.validin
           help: The tag prefix to use.
 
+  - name: ex.validin.setup.apihostname
+    descr: Set the API hostname used for making API requests. Defaults to `api.validin.com`
+    perms:
+      - [ex, validin, user]
+    cmdargs:
+      - - hostname
+        - type: str
+          default: api.validin.com
+          help: The domain hostname to use.
+
   - name: ex.validin.pdns
     descr: Fetches Passive DNS data for given `inet:ipv4` and `inet:fqdn` nodes.
     perms:
       - [ex, validin, user]
     cmdargs:
+      - - --include-extra
+        - type: bool
+          default: false
+          action: store_true
+          help: Include extra DNS record types (MX, NS, TXT) at a cost of 1 extra API call per node. Only works for `inet:fqdn` nodes
       - - --yield
         - type: bool
           default: false
           action: store_true
-          help: Yield the newly created nodes rather than the input inet:url nodes.
+          help: Yield the newly created nodes rather than the input nodes.
       - - --debug
         - type: bool
           default: false
@@ -70,14 +85,75 @@ commands:
       inputs:
         - inet:ipv4
         - inet:fqdn
-      output:
-        - inet:dns:a
-        - inet:dns:ns
-        - inet:dns:aaaa
+
+  - name: ex.validin.host.subdomains
+    descr: Fetches subdomains for a given `inet:fqdn` node
+    perms:
+      - [ex, validin, user]
+    cmdargs:
+      - - --yield
+        - type: bool
+          default: false
+          action: store_true
+          help: Yield the newly created nodes rather than the input inet:fqdn nodes.
+      - - --debug
+        - type: bool
+          default: false
+          action: store_true
+          help: Show verbose debug output.
+    forms:
+      inputs:
+        - inet:fqdn
+
+  - name: ex.validin.host.responses
+    descr: Ingests all the host responses as `inet:http:request` nodes
+    perms:
+      - [ex, validin, user]
+    cmdargs:
+      - - --yield
+        - type: bool
+          default: false
+          action: store_true
+          help: Yield the newly created nodes rather than the input nodes.
+      - - --debug
+        - type: bool
+          default: false
+          action: store_true
+          help: Show verbose debug output.
+    forms:
+      inputs:
+        - inet:fqdn
+        - inet:ipv4
+
+  - name: ex.validin.host.search
+    descr: Searches Validin dataset using the Advanced Search syntax
+    perms:
+      - [ex, validin, user]
+    cmdargs:
+      - - query
+        - type: str
+          help: The search query to run in Validin
+      - - --debug
+        - type: bool
+          default: false
+          action: store_true
+          help: Show verbose debug output.
 
 optic:
     actions:
-      - name: pdns
+      - name: pdns (A & AAAA only)
         storm: ex.validin.pdns
         descr: Get passive DNS information from Validin
         forms: [ inet:fqdn, inet:ipv4 ]
+      - name: pdns (all types)
+        storm: ex.validin.pdns --include-extra
+        descr: Get passive DNS information from Validin
+        forms: [ inet:fqdn, inet:ipv4 ]
+      - name: host responses
+        storm: ex.validin.host.responses
+        descr: Get host responses from Validin
+        forms: [ inet:fqdn, inet:ipv4 ]
+      - name: host subdomains
+        storm: ex.validin.host.subdomains
+        descr: Get subdomains from Validin
+        forms: [ inet:fqdn ]
